--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,14 +18,18 @@
   "dependencies": {
     "@angular/animations": "~10.0.0",
     "@angular/cdk": "^10.0.0",
+    "@angular/cli": "~10.0.0",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
     "@angular/material": "^10.0.0",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
